--- a/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
@@ -134,8 +134,8 @@
                             <td id="totalAmountPremium"></td>
                             <td id="totalAmountPremium2"></td>
                             <td id="totalAmountSpecial">-</td>
-                            <td>-</td>
-                            <td>-</td>
+                            <td id="totalAdditional">-</td>
+                            <td id="totalDeduction">-</td>
                             <td id="totalAmount"></td>
                             <td id="totalVat"></td>
                         </tr>
