--- a/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
@@ -19,7 +19,7 @@
             </li>
             <li>
                 <label>Price List<span class="required">*</span></label>
-                <input type="text" id="txtPrice" class="field-divided text-floatleft text-size120 text-right" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" onblur="convertFloat('#txtPrice')" />&nbsp;<label>Bath</label>
+                <input type="text" id="txtPricelist" class="field-divided text-floatleft text-size120 text-right" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" onblur="convertFloat('#txtPrice')" />&nbsp;<label>Bath</label>
             </li>
             <li>
                 <label>Sequence<span class="required">*</span></label>
