--- a/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Master Income Edit</h2>
+@*<h2>Master Income Edit</h2>*@
 <script src="@Url.Content("~/Scripts/CUDS/IncomeMaster/EditIncomeMaster.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
     @using (Html.BeginForm())
@@ -17,7 +17,7 @@
                 </li>
                 <li>
                     <label>Price List<span class="required">*</span></label>
-                    <input type="text" id="txtPrice" class="field-divided text-floatleft text-size120 text-right" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" onblur="convertFloat('#txtPrice')"/>&nbsp;<label>Bath</label>
+                    <input type="text" id="txtPricelist" class="field-divided text-floatleft text-size120 text-right" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" onblur="convertFloat('#txtPrice')"/>&nbsp;<label>Bath</label>
                 </li>
                 <li>
                     <label>Sequence<span class="required">*</span></label>
