--- a/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
+++ b/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
@@ -1000,6 +1000,13 @@
                         <input type="text" class="form-control" id="txtTaker" disabled>
                     </div>
                 </div>
+                <div class="col-xs-4 col-sm-3 col-lg-2">
+                    <div class="form-group">
+                        <label for="txtReturner">ผู้รับคืน:</label>
+                        <input type="text" class="form-control" id="txtReturner" disabled>
+                        <label><input type="checkbox" id="chkReturn" class="chkReturn" onchange="ReturnStock()" value="">Return</label>
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-xs-4 col-sm-3 col-lg-2">
@@ -1023,13 +1030,10 @@
                     </div>
                 </div>
             <div class="row">
-                <div class="col-xs-4 col-sm-3 col-lg-2"></div>
-                <div class="col-xs-4 col-sm-3 col-lg-2"></div>
-                <div class="col-xs-4 col-sm-3 col-lg-2">
+                <div class="col-xs-10 col-sm-5 col-lg-4">
                     <div class="form-group">
-                        <label for="txtReturner">ผู้รับคืน:</label>
-                        <input type="text" class="form-control" id="txtReturner" disabled>
-                        <label><input type="checkbox" id="chkReturn" class="chkReturn" onchange="ReturnStock()" value="">Return</label>
+                        <label for="txtCustomer">ลูกค้า:</label>
+                        <input type="text" class="form-control" id="txtCustomer" disabled>
                     </div>
                 </div>
             </div>
