--- a/Alpha/AlphaMvc/Views/Requisition/IndexRequisition.cshtml
+++ b/Alpha/AlphaMvc/Views/Requisition/IndexRequisition.cshtml
@@ -53,6 +53,8 @@
                 <th class="thgray Rowpointer">Job No.</th>
                 <th class="thgray Rowpointer">วันที่</th>
                 <th class="thgray Rowpointer">ลูกค้า</th>
+                <th class="thgray Rowpointer">ผู้เบิก</th>
+                <th class="thgray Rowpointer">ผู้คืน</th>
                 <th class="thgray Rowpointer">สถานะ</th>
                 <th class="thgray hidecolumn Rowpointer">เบอร์โทร</th>
                 <th class="thgray hidecolumn Rowpointer">บุคคลติดต่อ</th>
