--- a/Alpha/AlphaMvc/Views/SecurityProfile/IndexSecurityProfile.cshtml
+++ b/Alpha/AlphaMvc/Views/SecurityProfile/IndexSecurityProfile.cshtml
@@ -46,6 +46,7 @@
             <th class="thblue Rowpointer">No.</th>
             <th class="thblue hidecolumn">ID</th>
             <th class="thblue Rowpointer">รายละเอียด</th>
+            <th class="thblue Rowpointer">สิทธิหน้าแรก</th>
             <th class="thblue"></th>
         </tr>
     </thead>
