--- a/Alpha/AlphaMvc/Views/AllActivity/AllActivity.cshtml
+++ b/Alpha/AlphaMvc/Views/AllActivity/AllActivity.cshtml
@@ -224,6 +224,8 @@ $(document).ready(function () {
                         <th class="thgray Rowpointer">Job No.</th>
                         <th class="thgray Rowpointer">วันที่</th>
                         <th class="thgray Rowpointer">ลูกค้า</th>
+                        <th class="thgray Rowpointer">ผู้เบิก</th>
+                        <th class="thgray Rowpointer">ผู้คืน</th>
                         <th class="thgray Rowpointer">สถานะ</th>
                         <th class="thgray hidecolumn Rowpointer">เบอร์โทร</th>
                         <th class="thgray hidecolumn Rowpointer">บุคคลติดต่อ</th>
