--- a/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
@@ -47,12 +47,12 @@
 <table id="tblExpenseMaster" class="table tbblue table-striped-blue scrolling" >
     <thead class="bgthead-blue">
         <tr>
-            <th class="thblue Rowpointer">No.</th>
+            <th class="thblue Rowpointer txtcenter">No.</th>
             <th class="thblue hidecolumn">ID</th>
             <th class="thblue Rowpointer">Group</th>
             <th class="thblue Rowpointer">รายละเอียด</th>
             <th class="thblue Rowpointer">ราคา</th>
-            <th class="thblue Rowpointer">ลำดับ</th>
+            <th class="thblue Rowpointer txtcenter">ลำดับ</th>
             <th class="thblue"></th>
         </tr>
     </thead>
