--- a/Alpha/AlphaMvc/Views/ExpiredTechnician1/ExpiredTechnician1.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpiredTechnician1/ExpiredTechnician1.cshtml
@@ -38,7 +38,7 @@
     <table class="barattach-navyblue">
         <tr>
             <td>
-                <label class="topictable">Teachnician</label>
+                <label class="topictable">Expired Card</label>
                 <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
             </td>
         </tr>
