--- a/Alpha/AlphaMvc/Views/Home/DashBoard.cshtml
+++ b/Alpha/AlphaMvc/Views/Home/DashBoard.cshtml
@@ -224,7 +224,7 @@ $(document).ready(function () {
         <table class="barattach-gray">
             <tr>
                 <td>
-                    <label class="topicmargin-size67">Requisition & Return</label>
+                    <label class="topicmargin-size67">Expired Card</label>
                     <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
                 </td>
             </tr>
@@ -232,7 +232,7 @@ $(document).ready(function () {
         <table id="tblExpiredTechnician" class="table tbgray table-striped-gray scrolling">
             <thead class="bgthead-gray">
                 <tr>
-                    <th class="thgray">No.</th>
+                    <th class="thgray txtcenter">No.</th>
                     <th class="hidecolumn">TechnicianID</th>
                     <th class="thgray">ชื่อ-นามสกุล</th>
                     <th class="thgray hideANDseek">ตำแหน่ง</th>
