--- a/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
@@ -49,11 +49,11 @@
     <table id="tblIncomeMaster" class="table tbblue table-striped-blue scrolling" onended="SetPaging()">
     <thead class="bgthead-blue">
         <tr>
-            <th class="thblue Rowpointer">No.</th>
+            <th class="thblue Rowpointer txtcenter">No.</th>
             <th class="thblue hidecolumn Rowpointer ">ID</th>
             <th class="thblue Rowpointer">รายละเอียด</th>
             <th class="thblue Rowpointer">ราคา</th>
-            <th class="thblue Rowpointer">ลำดับ</th>
+            <th class="thblue Rowpointer txtcenter">ลำดับ</th>
             <th class="thblue"></th>
         </tr>
     </thead>
