--- a/Alpha/AlphaMvc/Views/ReportBorrow/IndexRptBorrow.cshtml
+++ b/Alpha/AlphaMvc/Views/ReportBorrow/IndexRptBorrow.cshtml
@@ -48,14 +48,17 @@
     <table id="tblRptBorrow" class="table tbpink table-striped-pink scrolling" onended="SetPaging()">
         <thead class="bgthead-pink">
             <tr>
-                <th class="thpink Rowpointer">No.</th>
+                <th class="thpink Rowpointer txtcenter">No.</th>
                 <th class="thpink Rowpointer">Job No.</th>
                 <th class="thpink Rowpointer">วันที่</th>
                 <th class="thpink Rowpointer">ลูกค้า</th>
-                <th class="thpink Rowpointer">เบอร์โทร</th>
-                <th class="thpink hideANDseek Rowpointer">บุคคลติดต่อ</th>
-                <th class="thpink hideANDseek Rowpointer">ผู้ประสานงาน</th>
-                <th class="thpink hideANDseek Rowpointer">หมายเหตุ</th>
+                <th class="thpink Rowpointer">ผู้เบิก</th>
+                <th class="thpink Rowpointer">ผู้รับคืน</th>
+                <th class="thpink Rowpointer">สถานะ</th>
+                <th class="thpink hidecolumn Rowpointer">เบอร์โทร</th>
+                <th class="thpink hidecolumn Rowpointer">บุคคลติดต่อ</th>
+                <th class="thpink hidecolumn Rowpointer">ผู้ประสานงาน</th>
+                <th class="thpink hidecolumn Rowpointer">หมายเหตุ</th>
                 <th class="thpink"></th>
             </tr>
         </thead>
