--- a/Alpha/AlphaMvc/Views/SecurityProfile/IndexSecurityProfile.cshtml
+++ b/Alpha/AlphaMvc/Views/SecurityProfile/IndexSecurityProfile.cshtml
@@ -43,10 +43,10 @@
 <table id="tblSecurityProfile" class="table tbblue table-striped-blue scrolling" onended="SetPaging()">
     <thead class="bgthead-blue">
         <tr>
-            <th class="thblue Rowpointer">No.</th>
+            <th class="thblue Rowpointer txtcenter">No.</th>
             <th class="thblue hidecolumn">ID</th>
             <th class="thblue Rowpointer">รายละเอียด</th>
-            <th class="thblue Rowpointer">สิทธิหน้าแรก</th>
+            <th class="thblue Rowpointer">หน้าแรก</th>
             <th class="thblue"></th>
         </tr>
     </thead>
