--- a/Alpha/AlphaMvc/Views/User/IndexUser.cshtml
+++ b/Alpha/AlphaMvc/Views/User/IndexUser.cshtml
@@ -44,11 +44,11 @@
     <table id="tblUser" class="table tbblue table-striped-blue scrolling" onended="SetPaging()">
         <thead class="bgthead-blue">
             <tr>
-                <th class="thblue Rowpointer">No.</th>
+                <th class="thblue Rowpointer txtcenter">No.</th>
                 <th class="thblue hidecolumn">ID</th>
                 <th class="thblue Rowpointer">UserName</th>
-                @*<th class="Rowpointer">Name</th>*@
-                @*<th class="Rowpointer">Email</th>*@
+                <th class="thblue Rowpointer">Full Name</th>
+                <th class="thblue Rowpointer">Email</th>
                 @*<th class="Rowpointer">UserStatus</th>*@
                 <th class="thblue Rowpointer">SecurityProfile</th>
                 <th class="thblue"></th>
