--- a/Alpha/AlphaMvc/Views/AllActivity/AllActivity.cshtml
+++ b/Alpha/AlphaMvc/Views/AllActivity/AllActivity.cshtml
@@ -220,12 +220,12 @@ $(document).ready(function () {
             <table id="tblRequisition" class="table tbgray table-striped-gray scrolling" onended="SetPaging()">
                 <thead class="bgthead-gray">
                     <tr>
-                        <th class="thgray Rowpointer">No.</th>
+                        <th class="thgray Rowpointer txtcenter">No.</th>
                         <th class="thgray Rowpointer">Job No.</th>
                         <th class="thgray Rowpointer">วันที่</th>
                         <th class="thgray Rowpointer">ลูกค้า</th>
                         <th class="thgray Rowpointer">ผู้เบิก</th>
-                        <th class="thgray Rowpointer">ผู้คืน</th>
+                        <th class="thgray Rowpointer">ผู้รับคืน</th>
                         <th class="thgray Rowpointer">สถานะ</th>
                         <th class="thgray hidecolumn Rowpointer">เบอร์โทร</th>
                         <th class="thgray hidecolumn Rowpointer">บุคคลติดต่อ</th>
