--- a/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "CreateExpenseMaster";
 }
 
-<h2>Master Expense Create</h2>
+@*<h2>Master Expense Create</h2>*@
 <script src="@Url.Content("~/Scripts/CUDS/ExpenseMaster/CreateExpenseMaster.js")" type="text/javascript"></script>
 <!-- Modal -->
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
@@ -14,8 +14,8 @@
     <form>
         <ul class="form-style">
             <li>
-                <label class="label-small-7">Expense Group</label>&nbsp;<label class="label-2">Detail<span class="required">*</span></label>
-                <select id="cmbTypeWorking" class="field-divided text-floatleft text-size120" required></select>&nbsp;<input type="text" id="txtDetail" class="field-divided" placeholder="" />
+                <label class="label-small-22">Expense Group</label>&nbsp;<label class="label-2">Detail<span class="required">*</span></label>
+                <select id="cmbTypeWorking" class="field-divided text-floatleft text-size180" required></select>&nbsp;<input type="text" id="txtDetail" class="field-divided text-size180" placeholder="" />
             </li>
             <li>
                 <label>Price List<span class="required">*</span></label>
