--- a/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "EditExpenseMaster";
 }
 
-<h2>Master Expense Edit</h2>
+@*<h2>Master Expense Edit</h2>*@
 <script src="@Url.Content("~/Scripts/CUDS/ExpenseMaster/EditExpenseMaster.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 
@@ -12,8 +12,8 @@
         <form>
             <ul class="form-style">
                 <li>
-                    <label class="label-small-7">Expense Group</label>&nbsp;<label class="label-2">Detail<span class="required">*</span></label>
-                    <select id="cmbExpenseGroup" class="field-divided text-floatleft text-size120" required></select>&nbsp;<input type="text" id="txtDetail" class="field-divided" placeholder="" />
+                    <label class="label-small-22">Expense Group</label>&nbsp;<label class="label-2">Detail<span class="required">*</span></label>
+                    <select id="cmbExpenseGroup" class="field-divided text-floatleft text-size180" required></select>&nbsp;<input type="text" id="txtDetail" class="field-divided text-size180" placeholder="" />
                 </li>
                 <li>
                     <label>Price List<span class="required">*</span></label>
