--- a/Alpha/AlphaMvc/Views/Technician/IndexTechnician.cshtml
+++ b/Alpha/AlphaMvc/Views/Technician/IndexTechnician.cshtml
@@ -48,7 +48,7 @@
         <thead class="bgthead-navyblue">
             <tr>
                 <th class="thgray Rowpointer">No.</th>
-                <th class="thgray Rowpointer">TechnicianID</th>
+                <th class="thgray Rowpointer hidecolumn">TechnicianID</th>
                 <th class="thgray hideANDseek Rowpointer">HRID</th>
                 <th class="thgray Rowpointer">Name</th>
                 <th class="thgray Rowpointer">Position</th>
