--- a/Alpha/AlphaMvc/Views/User/CreateUser.cshtml
+++ b/Alpha/AlphaMvc/Views/User/CreateUser.cshtml
@@ -15,13 +15,13 @@
         width: 20px;
     }
 </style>
-<table>
+@*<table>
     <tr>
         <td>
             <div class="linkstyle">@Html.ActionLink("User List", "IndexUser")</div>
         </td>
     </tr>
-</table>
+</table>*@
 <div id="myModal">
     @using (Html.BeginForm())
     {
