--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -18,13 +18,13 @@
         width: 20px;
     }
 </style>
-<table>
+@*<table>
     <tr>
         <td>
             <div class="linkstyle">@Html.ActionLink("Products List", "IndexProducts")</div>
         </td>
     </tr>
-</table>
+</table>*@
 <div id="myModal">
     @using (Html.BeginForm())
     {
