--- a/Alpha/AlphaMvc/Views/User/CreateUser.cshtml
+++ b/Alpha/AlphaMvc/Views/User/CreateUser.cshtml
@@ -33,7 +33,7 @@
                     <input type="hidden" id="hidIsADUser" />
                 </li>
                 <li>
-                    <input type="text" id="txtUserName" name="field_1" class="field-divided float-left width-190" />
+                    <input type="text" id="txtUserName" name="field_1" class="field-divided float-left width-190" autofocus/>
                     <button type="button" id="btnCheck" class="btn btn-primary float-none marginleft btnwidth" onclick="CheckAD()">Get ADUser</button>
                 </li>
                 <li>
