--- a/Alpha/AlphaMvc/Views/User/EditUser.cshtml
+++ b/Alpha/AlphaMvc/Views/User/EditUser.cshtml
@@ -33,7 +33,7 @@
                     <label class="label-2" style="margin-right: 33%;">UserName<span class="required">*</span></label>&nbsp;<label class="label-2" style="margin-right: 10%;">Position</label>
                 </li>
                 <li>
-                    <input type="text" id="txtUserName" name="field_1" class="field-divided width-190" disabled/>&nbsp;<input type="text" id="txtTitle" name="field1" class="field-divided width-45per" disabled />
+                    <input type="text" id="txtUserName" name="field_1" class="field-divided width-190" disabled autofocus/>&nbsp;<input type="text" id="txtTitle" name="field1" class="field-divided width-45per" disabled />
                 </li>
                 <li>
                     <label class="label-2 marginright-43">ชื่อ</label>&nbsp;<label class="label-2" style="margin-right: 5%;">นามสกุล</label>
