--- a/Alpha/AlphaMvc/Content/custom.css
+++ b/Alpha/AlphaMvc/Content/custom.css
@@ -20,6 +20,11 @@
  */
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
+.required
+{
+    color:red;
+    font-weight:bold;
+}
 .txtcenter{
     text-align:center;
 }
