--- a/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
@@ -13,7 +13,7 @@
             <ul class="form-style">
                 <li>
                     <label class="label-small-22">Expense Group</label>&nbsp;<label class="label-2">Detail<span class="required">*</span></label>
-                    <select id="cmbExpenseGroup" class="field-divided text-floatleft text-size180" required></select>&nbsp;<input type="text" id="txtDetail" class="field-divided text-size180" placeholder="" />
+                    <select id="cmbExpenseGroup" class="field-divided text-floatleft text-size180" required autofocus></select>&nbsp;<input type="text" id="txtDetail" class="field-divided text-size180" placeholder="" />
                 </li>
                 <li>
                     <label>Price List<span class="required">*</span></label>
