--- a/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
@@ -14,7 +14,7 @@
                 <ul class="form-style">
                     <li>
                         <label>Detail<span class="required">*</span></label>
-                        <input type="text" id="txtDetail" class="field-divided" placeholder="" />&nbsp;
+                        <input type="text" id="txtDetail" class="field-divided" placeholder="" autofocus />&nbsp;
                     </li>
                     <li>
                         <label>Price List<span class="required">*</span></label>
