--- a/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
@@ -13,7 +13,7 @@
             <ul class="form-style">
                 <li>
                     <label>Detail<span class="required">*</span></label>
-                    <input type="text" id="txtDetail" class="field-divided" placeholder="" />
+                    <input type="text" id="txtDetail" class="field-divided" placeholder="" autofocus />
                 </li>
                 <li>
                     <label>Price List<span class="required">*</span></label>
