--- a/Alpha/AlphaMvc/Views/SecurityProfile/EditSecurityProfile.cshtml
+++ b/Alpha/AlphaMvc/Views/SecurityProfile/EditSecurityProfile.cshtml
@@ -12,7 +12,7 @@
             <ul class="form-style">
                 <li>
                     <label>Profile<span class="required">*</span></label>
-                    <input type="text" id="txtProfile" class="field-divided" placeholder="" />
+                    <input type="text" id="txtProfile" class="field-divided" placeholder="" autofocus/>
                 </li>
                 <li>
                     <label>First Page<span class="required">*</span></label>
