--- a/Alpha/AlphaMvc/Views/SecurityProfile/IndexSecurityProfile.cshtml
+++ b/Alpha/AlphaMvc/Views/SecurityProfile/IndexSecurityProfile.cshtml
@@ -45,8 +45,8 @@
         <tr>
             <th class="thblue Rowpointer txtcenter">No.</th>
             <th class="thblue hidecolumn">ID</th>
-            <th class="thblue Rowpointer">รายละเอียด</th>
-            <th class="thblue Rowpointer">หน้าแรก</th>
+            <th class="thblue Rowpointer">Profile</th>
+            <th class="thblue Rowpointer">First Page</th>
             <th class="thblue"></th>
         </tr>
     </thead>
