--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -12,7 +12,7 @@
 <script src="@Url.Content("~/Scripts/timepicker/jquery.timepicker.js")" type="text/javascript"></script>
 @* =============== Pager *@
 <script src="@Url.Content("~/Scripts/EditableGrid/Pager.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/CUDS/JobOrderBorrow/IndexJobOrderBorrow.js")" type="text/javascript"></script>
+@*<script src="@Url.Content("~/Scripts/CUDS/JobOrderBorrow/IndexJobOrderBorrow.js")" type="text/javascript"></script>*@
 <script src="@Url.Content("~/Scripts/CUDS/JobOrder/EditJobOrder.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 
@@ -975,12 +975,12 @@
         var after = input.split('?')[1]
         var val = after.split('=');
         var Isview = val[2];
-
+        //alert(Isview);
         ControlEnable(Isview);
         //SetRowCal5();
         GetContact(@Request.Params["id"]);
         GetData(@Request.Params["id"]);
-        GetJobOrderBorrow(@Request.Params["id"]); 
+        @*GetJobOrderBorrow(@Request.Params["id"]);*@ 
         
     });
     function GetDay() {
