--- a/Alpha/AlphaMvc/Views/ReportBorrow/IndexRptBorrow.cshtml
+++ b/Alpha/AlphaMvc/Views/ReportBorrow/IndexRptBorrow.cshtml
@@ -40,6 +40,7 @@
 <table class="barattach-pink">
     <tr>
         <td>
+            <label class="topictable">Requisition & Retuen</label>
             <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
         </td>
     </tr>
