--- a/Alpha/AlphaMvc/Views/Requisition/IndexRequisition.cshtml
+++ b/Alpha/AlphaMvc/Views/Requisition/IndexRequisition.cshtml
@@ -41,7 +41,8 @@
 <table class="barattach-2">
     <tr>
         <td>
-            <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
+            <label class="topicmargin-size67">Requisition & Return</label>
+            <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
         </td>
     </tr>
 </table>
